[gd_scene load_steps=9 format=3 uid="uid://buv7q3ykr8shq"]

[ext_resource type="Script" uid="uid://diejsj6y8qp8d" path="res://Scripts/Thunderbolt.gd" id="1_thunderbolt"]
[ext_resource type="Texture2D" uid="uid://nu25auhieek7" path="res://Assets/Sprites/Particles/circle_03.png" id="2_a0kuq"]
[ext_resource type="Texture2D" uid="uid://cpk565u4q35my" path="res://Assets/Sprites/Particles/magic_01.png" id="3_k3ys3"]
[ext_resource type="Texture2D" uid="uid://b5rlbj2wb5pf8" path="res://Assets/Sprites/Particles/spark_05_rotated.png" id="4_tnrxn"]
[ext_resource type="Texture2D" uid="uid://tsku0o1wivlk" path="res://Assets/Sprites/Particles/spark_06_rotated.png" id="5_yggla"]
[ext_resource type="Texture2D" uid="uid://coysnyijhusa4" path="res://Assets/Sprites/Particles/spark_07.png" id="6_1hiqc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_thunderbolt"]
radius = 20.0

[sub_resource type="SpriteFrames" id="SpriteFrames_inudk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tnrxn")
}, {
"duration": 1.0,
"texture": ExtResource("5_yggla")
}, {
"duration": 1.0,
"texture": ExtResource("4_tnrxn")
}, {
"duration": 1.0,
"texture": ExtResource("6_1hiqc")
}, {
"duration": 1.0,
"texture": ExtResource("5_yggla")
}, {
"duration": 1.0,
"texture": ExtResource("6_1hiqc")
}, {
"duration": 1.0,
"texture": ExtResource("5_yggla")
}, {
"duration": 1.0,
"texture": ExtResource("6_1hiqc")
}, {
"duration": 1.0,
"texture": ExtResource("4_tnrxn")
}, {
"duration": 1.0,
"texture": ExtResource("5_yggla")
}, {
"duration": 1.0,
"texture": ExtResource("6_1hiqc")
}, {
"duration": 1.0,
"texture": ExtResource("6_1hiqc")
}, {
"duration": 1.0,
"texture": ExtResource("5_yggla")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Thunderbolt" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_thunderbolt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_thunderbolt")

[node name="Visual" type="Node2D" parent="."]

[node name="OuterGlow" type="Sprite2D" parent="Visual"]
z_index = -2
position = Vector2(-3, 16)
scale = Vector2(0.6972656, 0.6972656)
texture = ExtResource("2_a0kuq")

[node name="CoreGlow" type="Sprite2D" parent="Visual"]
z_index = -1
position = Vector2(-1.0999756, 4.9000125)
scale = Vector2(0.8042969, 0.78085935)
texture = ExtResource("3_k3ys3")

[node name="MainBolt" type="AnimatedSprite2D" parent="Visual"]
position = Vector2(-6, -3.9999847)
scale = Vector2(0.5449219, 0.42578125)
sprite_frames = SubResource("SpriteFrames_inudk")
frame = 9
frame_progress = 0.7800327

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
